--- a/accueil.css
+++ b/accueil.css
@@ -17,7 +17,7 @@ header{
     height: 3rem;
 }
 #p-header{
-    color: #083b7f;
+    color: #143D73;
 }
 a{
     text-decoration: none;
@@ -37,7 +37,7 @@ nav{
     display: flex;
     justify-items: center;
     justify-content: space-around;
-    background-color: #083b7f;
+    background-color: #143D73;
 }
 nav a {
     color: white;
@@ -72,7 +72,7 @@ nav a {
 }
 .partenaires p{
     padding: 0.5rem 2rem;
-    background-color: #083b7f;
+    background-color: #143D73;
     color: white;
     border-radius: 20px;
     /* margin-right: 2rem; */
@@ -100,7 +100,7 @@ nav a {
 footer{
     width: 100%;
     display: flex;
-    background-color: #083b7f;
+    background-color: #143D73;
     display: block;
 }
 footer img{
