--- a/accueil.css
+++ b/accueil.css
@@ -38,6 +38,7 @@ nav{
     justify-items: center;
     justify-content: space-around;
     background-color: #143D73;
+    
 }
 nav a {
     color: white;
@@ -124,4 +125,130 @@ footer a{
     justify-content: space-around;
 }
 
+/* Version tablette (max-width: 768px) */
+@media (max-width: 768px) {
+    .menu{
+        display: none;
+    }
+    .img-accueil p{
+        position: absolute;
+        top: 15rem;
+        font-size: 0.7rem;
+    }
+    .partenaires p{
+        font-size: small;
+    }
+    .logo-partenaires{
+        display: block;
+    }
+    .partenaires img{
+        width: 5rem;
+    }
+    footer{
+        display: block;
+    }
+    .div-footer1{
+        display: block;
+    }
+    .div-footer2{
+        display: block;
+    }
+    .div-footer3{
+        display: block;
+    }
+    footer a {
+        font-size: x-small;
+    }
+    footer p{
+        font-size: x-small;
+    }
+}
 
+/* Version mobile (max-width: 480px) */
+@media (max-width: 480px) {
+    .menu{
+        display: none;
+    }
+    .img-accueil p{
+        position: absolute;
+        top: 15rem;
+        font-size: 0.7rem;
+    }
+    .partenaires p{
+        font-size: small;
+    }
+    .logo-partenaires{
+        display: block;
+    }
+    .partenaires img{
+        width: 5rem;
+    }
+    footer{
+        display: block;
+    }
+    .div-footer1{
+        display: block;
+    }
+    .div-footer2{
+        display: block;
+    }
+    .div-footer3{
+        display: block;
+    }
+    footer a {
+        font-size: x-small;
+    }
+    footer p{
+        font-size: x-small;
+    }
+}
+
+.burger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2rem;
+    height: 1.5rem;
+    cursor: pointer;
+}
+.burger span {
+    width: 100%;
+    height: 0.2rem;
+    background-color: white;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px; /* Ajustez selon la hauteur de la barre */
+        left: 0;
+        width: 100%;
+        background-color: #083b7f;
+        z-index: 10;
+        padding: 1rem 0;
+    }
+
+    .menu.active {
+        display: flex;
+        width: 12rem;
+        height: 60%;
+        background-color: #143D73;
+    }
+
+    .burger {
+        display: flex;
+    }
+    a{
+        margin-left: 1rem;
+    }
+    .burger{
+        position: absolute;
+        left: 0;
+        top:4rem;
+    }
+}
