--- a/ressources.css
+++ b/ressources.css
@@ -1,11 +1,14 @@
+@font-face {
+  font-family: AbhayaLibre-Regular;
+  src: url(./fonts/abhaya-libre/AbhayaLibre-Regular.ttf);
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "Abhaya Libre SemiBold", serif;
-  font-weight: 600;
+  font-family: "AbhayaLibre-Regular", serif;
 }
 #imgresources {
   width: 100%;
@@ -132,6 +135,7 @@ body {
 .cont {
   display: flex;
   justify-content: center;
+  margin: 16px;
 }
 @media screen and (max-width: 767px) {
   #imgresources {
